# neurogesture-edge-fl

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: api.yaml  data.yaml  model.yaml  training.yaml
demo/: replay_emg_stream.py
docs/: architecture.md  reproducibility.md  results.md
src/: __init__.py
src/api/: gesture_commands.py  main.py  schemas.py
src/data/: __init__.py  download_dataset.py  make_dataset.py  make_windows.py  parse_uci_emg.py
src/edge/: __init__.py  benchmark_latency.py  export_onnx.py  quantize_onnx.py
src/evaluation/: metrics.py  reports.py  splits.py
src/federated/: __init__.py  aggregation.py  client.py  simulate_fedavg.py  simulate_fedprox.py
src/models/: classical.py  cnn1d.py  tcn.py
src/personalization/: __init__.py  calibrate_user.py  evaluate_calibration.py
src/preprocessing/: __init__.py  features.py  normalization.py  windowing.py
src/training/: train_baseline.py  train_deep.py
src/utils/: logging.py  seed.py
tests/: test_edge_export.py  test_features.py  test_federated.py  test_make_windows.py  test_parse_uci_emg.py  test_personalization.py  test_train_deep.py  test_training_baseline.py  test_windowing.py
